# lambda-bridge

./: .gitignore  lambda-bridge.cabal
Network/LambdaBridge/: Board.hs  Bridge.hs  Bus.hs  CRC.hs  Frame.hs  Handle.hs  Logging.hs  MVar.hs  SLIP.hs  Serial.hs  Server.hs  Socket.hs  UDP.hs
Network/LambdaBridge/Bus/: Simulator.hs
examples/rs232/: Main.hs
tests/: Main.hs
tests/rs232/: Main.hs  Makefile
